Bug 163337 - FILESAVE: XLSX -> ODS: gte attribute not kept
Summary: FILESAVE: XLSX -> ODS: gte attribute not kept
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: XLSX-Conditional-Formatting
  Show dependency treegraph
 
Reported: 2024-10-07 09:42 UTC by Xisco Faulí
Modified: 2024-10-12 09:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-10-07 09:42:46 UTC
This is a follow-up of bug 162948 to be reproduced after acc52f9bc0dbfcb5a8893b5aff2d18a2360d46e2

Steps to reproduce:
1. Open attachment 196417 [details] from bug 162938
2. Save to ODS
3. Open the new generated file

-> gte attribute is not kept after saving to ODS

Reproduced in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ff3791f67a6421d64f5f9d6a09feaead1a63ff92
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Buovjaga 2024-10-08 09:23:34 UTC
Repro

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40beeb144a00c9725cde4239c251f67c658d31a8
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 6 October 2024
Comment 2 Commit Notification 2024-10-12 09:23:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d923c227fa290ffdca175a5b903b5a745e2f4b3a

tdf#163337: keep gte attribute when saving to ods

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.