tdf#163337: keep gte attribute when saving to ods

Change-Id: I9565f6dd9b23645b47f232d837553fb4d492dc8f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174815
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>